--- a/android_okhttp_retrofit/app/src/main/res/layout/activity_main.xml
+++ b/android_okhttp_retrofit/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="yjh.test.android_okhttp_retrofit.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/allData"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_weight="1"
+        android:layout_margin="8dp"
+        android:textColor="#000"
+        android:gravity="center"
+        android:background="#3E588F"
+        android:text="Load all lists" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/categoryData"
+        android:layout_weight="1"
+        android:text="Load category lists"
+        android:gravity="center"
+        android:textColor="#000"
+        android:layout_margin="8dp"
+        android:layout_width="match_parent"
+        android:background="#203562"
+        android:layout_height="wrap_content" />
+
+
+
+</LinearLayout>
